# Sudhastar

./: build_files.sh  dockerfile  pyproject.toml  requirements.txt  vercel.json
SUDHASTAR/: build_files.sh  requirements.txt  vercel.json
SUDHASTAR/foodzone/: settings.py
SUDHASTAR/myapp/: views.py
SUDHASTAR/template/: index.html
foodzone/: settings.py  urls.py  wsgi.py
myapp/: models.py  views.py
staticfiles/css/: style.css
staticfiles/mail/: contact.php
template/: base.html  cookies.html  faq.html  help.html  index.html  privacy.html  terms.html
