[tool.poetry]
name = "foodzone"
version = "0.1.0"
description = ""
authors = ["sudhastar <sudhastar.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.1"
gunicorn = "^20.1"
# Add other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
